<resources>
    <string name="app_name">Old School Soccer</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="easy">EASY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_link">https://drive.google.com/drive/folders/1GUA5d5Sd7bCDL2_JzkpVegaK2SEt3YR4?usp=sharing</string>

    <string name="play">PLAY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">STATISTICS</string>
    <string name="normal">NORMAL</string>
    <string name="back">BACK</string>
    <string name="hard">HARD</string>
    <string name="test">TEST</string>
    <string name="test2">TEST2</string>
    <string name="test1">TEST1</string>
    <string name="update">UPDATE</string>
    <string name="other_games">OTHER GAMES</string>
    <string name="send_this_game_to_a_friend">SEND THIS GAME TO A FRIEND</string>
    <string name="new_photo">NEW PHOTO</string>
    <string name="multi">MULTI</string>
    <string name="settings">SETTINGS</string>
    <string name="your_name">YOUR NAME:</string>
    <string name="your_icon">YOUR ICON:</string>
    <string name="play_with_people">PLAY WITH PEOPLE</string>
    <string name="sound">SOUND</string>
    <string name="ranking">RANKING</string>
    <string name="total_score">TOTAL SCORE</string>
    <string name="total">TOTAL</string>
    <string name="history">HISTORY</string>
    <string name="all">ALL</string>
    <string name="vs">VS</string>
</resources>