<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <ImageView
        android:id="@+id/fragment_main_login_logout_Image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/fragment_main_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/fragment_main_choose_game_type_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/fragment_main_ranking_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ranking"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/fragment_main_settings_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/fragment_main_other_games_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/other_games"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/fragment_main_update_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/update"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/fragment_main_back_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>